metadata/Innovation Hub/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
                <value>
                    <fullName>Value 4</fullName>
                </value>
                <value>
                    <fullName>Value 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step 1</fullName>
                </value>
                <value>
                    <fullName>Step 2</fullName>
                </value>
                <value>
                    <fullName>Step 3</fullName>
                </value>
                <value>
                    <fullName>Step 4</fullName>
                </value>
                <value>
                    <fullName>Step 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
                <value>
                    <fullName>Category 4</fullName>
                </value>
                <value>
                    <fullName>Category 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Activity (innohub)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities (innohub)</pluralLabel>
    <recordTypes>
        <fullName>Activity_Type_1</fullName>
        <active>true</active>
        <description>Activity description</description>
        <label>Activity Type 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Type_2</fullName>
        <active>true</active>
        <description>Activity description</description>
        <label>Activity Type 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Type_3</fullName>
        <active>true</active>
        <description>Activity description</description>
        <label>Activity Type 3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Activity_Type_4</fullName>
        <active>true</active>
        <description>Activity description</description>
        <label>Activity Type 4</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Activity</fullName>
        <active>false</active>
        <description>New Description</description>
        <label>New Activity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>